--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "react-simple-star-rating": "^5.1.7",
     "react-youtube": "^10.1.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/humanize-duration": "^3.27.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
