--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,10 @@
-MONGODB_URI = 
+MONGODB_URI = ''
 
 CLERK_WEBHOOK_SECRET = ''
+
+CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+
+CLOUDINARY_NAME = ""
+CLOUDINARY_API_KEY = ""
+CLOUDINARY_SECRET_KEY = ""
